# faceblur

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  blur.cpp  capture.cpp  vcpkg.json  video.cpp
